<resources>
    <string name="app_name">todolist</string>
    <string name="action_settings">Settings</string>
    <string name="title">Task title</string>
    <string name="description">What do you need to do ?</string>
    <string name="commentary">Commentary</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="new_task">New task</string>
    <string name="edit_task">Edit task</string>
    <string name="todo">TO DO</string>
    <string name="urgent">URGENT</string>
    <string name="done">DONE</string>
    <string name="search">Search</string>
    <string name="search_hint">Write a task title</string>
    <string name="sort_alphabetical">sort by alphabetical order</string>
    <string name="sort_reverse_alphabetical">sort by reverse alphabetical order</string>
    <string name="sort_status">sort by status</string>
    <string name="sort_date">sort by due date</string>
    <string name="sort_default">default</string>
    <string name="reset">reset</string>
</resources>
