<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:lines="2"
        android:maxLines="2"
        android:gravity="top|left"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/purple_cursor"
        android:hint="@string/title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:lines="6"
        android:paddingTop="10dp"
        android:gravity="top|left"
        android:hint="@string/description" />

    <RadioGroup
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/todoColor"
            android:text="@string/todo" />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/DoneColor"
            android:text="@string/done"
            android:layout_weight="1" />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/urgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/UrgentColor"
            android:text="@string/urgent"
            android:layout_weight="1" />
    </RadioGroup>


    <EditText
        android:id="@+id/commentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:lines="6"
        android:gravity="top|left"
        android:layout_marginBottom="20dp"
        android:hint="@string/commentary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_date"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/calendar"/>

        <ImageButton
            android:id="@+id/btn_time"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/clock"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/in_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/in_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="bottom|right"
        style="?android:buttonBarStyle"
        android:showDividers="middle" >

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/save_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent" />

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>